--- a/src/main/resources/static/css/funding/fundingDetail.css
+++ b/src/main/resources/static/css/funding/fundingDetail.css
@@ -1,4 +1,4 @@
-/* Container for the whole page */
+/* 전체 페이지 컨테이너 조정 */
 .main-container {
     display: flex;
     flex-direction: column;
@@ -10,20 +10,70 @@
     box-sizing: border-box;
 }
 
-/* Main Area */
+/* 메인 영역 스타일 */
 .main-area {
     display: flex;
     width: calc(80% - 320px);
-    /* reward-selection이 고정된 만큼 왼쪽 영역의 너비를 조정 */
-    max-width: 1200px;
+    max-width: 930px;
     padding: 20px;
     border-radius: 10px;
     margin-right: 50px;
     box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
 }
 
+/* 슬라이더 섹션 */
+.image-slider {
+    position: relative;
+    max-width: 100%;
+    height: 400px; /* 고정 높이 설정 */
+    margin: auto;
+    overflow: hidden; /* 넘치는 내용 숨기기 */
+}
 
-/* Left side: Funding Area */
+/* 슬라이드들 */
+.slides {
+    display: flex;
+    overflow: hidden;
+    position: relative;
+    height: 100%;
+}
+
+.slide {
+    display: none;
+    width: 100%;
+    height: 100%; /* 슬라이더 높이에 맞춤 */
+    object-fit: contain; /* 이미지 비율을 유지하면서 슬라이더에 맞춤 */
+}
+
+.slide.active {
+    display: block;
+}
+
+/* 슬라이더 내 이전, 다음 버튼 */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    user-select: none;
+    transition: 0.6s ease;
+}
+
+.prev {
+    left: 0;
+}
+
+.next {
+    right: 0;
+}
+
+/* 왼쪽: 펀딩 영역 */
 .funding-area {
     flex: 2;
     padding-right: 20px;
@@ -73,20 +123,24 @@
     margin-bottom: 10px;
 }
 
-/* Right side: Reward Selection */
+/* 이미지 스타일 조정 */
+.description-area img {
+    max-width: 100%;
+    height: auto;
+    max-height: 300px;
+}
+
+/* 오른쪽: 리워드 선택 영역 */
 .reward-selection {
     flex: 1;
     position: fixed;
     top: 170px;
-    /* 페이지 상단에서부터의 거리 */
     right: 20px;
-    /* 오른쪽에서부터의 거리 */
     background-color: #ffecf0;
     padding: 20px;
     border-radius: 10px;
-    width: 300px;
+    width: 280px;
 }
-
 
 .reward-title {
     font-size: 18px;
@@ -112,11 +166,28 @@
     background-color: #0056b3;
 }
 
-.description-area img {
-    max-width: 100%;
-    /* 이미지를 영역 안에 맞춤 */
-    height: auto;
-    /* 이미지 비율 유지 */
-    max-height: 300px;
-    /* 최대 높이를 제한 */
+/* 슬라이더 내 dot 스타일 */
+.dot-container {
+    text-align: center;
+    position: absolute; /* absolute로 설정해 이미지 아래에 고정 */
+    bottom: 10px; /* 이미지 하단에 배치 */
+    width: 100%; /* 중앙 정렬을 위해 전체 폭을 차지 */
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.dot {
+    height: 15px;
+    width: 15px;
+    margin: 0 5px;
+    background-color: rgba(255, 255, 255, 0.5); /* dot의 기본 배경을 반투명한 흰색으로 변경 */
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+    cursor: pointer;
+}
+
+.dot.active {
+    background-color: rgba(0, 0, 0, 0.7); /* 활성화된 dot의 배경 색을 어둡게 변경 */
 }
