--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -78,6 +78,12 @@ p {
 	background-color: #ddd;
 }
 
+/* a 링크 */
+    a { text-decoration: none; color: black; }
+    a:visited { text-decoration: none; }
+    a:hover { text-decoration: none; }
+    a:focus { text-decoration: none; }
+    a:hover, a:active { text-decoration: none; }
 /* 추가 CSS 스타일링 */
 
 /* 카테고리 필터 스타일 */
@@ -142,6 +148,74 @@ p {
 	color: #444;
 }
 
+/* 정렬 버튼*/
+/* 원형 컨테이너 */
+.btn--area{
+	display: flex;
+	width: 100%;
+	justify-content: flex-end;
+	
+	
+}
+.btn--area--category,
+.btn--area--genre {
+	display: flex;
+    align-items: center;
+    justify-content:center;
+    width: 10%;   /* 원의 너비 */
+    height: 20px;  /* 원의 높이 */
+    border-radius: 25px;  /* 원형으로 만들기 */
+    border: 2px solid #000;  /* 테두리 */
+    padding: 10px;
+    background-color: #f0f0f0; /* 원의 배경색 */
+    position: relative;
+}
+
+/* 버튼 스타일 */
+.btn--area--category button,
+.btn--area--genre  button {
+    position: relative;
+    z-index: 1; /* 버튼 위에 배경이 덮이지 않게 설정 */
+    width: 80px;
+    height: 40px;
+    border: none;
+    color: black;
+    border-radius: 5px;
+    cursor: pointer;
+    background-color: transparent; /* 기본 버튼 배경 투명 */
+    transition: color 0.3s ease;
+}
+.btn--area--category::before,
+.btn--area--genre::before {
+    content: '';
+    position: absolute;
+    width: 60px;
+    height: 40px;
+    background-color: #007bff;  /* 선택된 버튼 색상 */
+    border-radius: 5px;
+    transition: transform 0.5s ease, width 0.5s ease;
+    z-index: 0; /* 배경은 버튼 아래 */
+    transform: translateX(-30px);  /* 처음에 왼쪽에 위치 */
+}
+
+.btn--area--category button.active,
+.btn--area--genre button.active  {
+    color: white;
+}
+
+/* 애니메이션: 배경이 이동하는 효과 */
+.btn--area--category.active-before::before,
+.btn--area--genre.active-before::before {
+    transform: translateX(calc(30px + 0px)); /* 두 번째 버튼으로 이동하는 애니메이션 */
+    width: 60px;
+}
+
+.btn--area--category.active-after::before,
+.btn--area--genre.active-after::before  {
+    transform: translateX(0); /* 첫 번째 버튼으로 이동하는 애니메이션 */
+    width: 80px;
+}
+
 /* 책 목록 스타일 */
 h3 {
 	display: flex;
@@ -153,8 +227,10 @@ h3 {
 .book--list--1, .book--list--2, .book--list--3 {
 	display: flex;
 	flex-wrap: wrap;
+	width:1200px;
 	gap: 20px;
 	margin-left: 100px;
+	margin-bottom: 100px;
 	justify-content: flex-start; /* 책 목록 중앙 정렬 */
 }
 
@@ -249,12 +325,7 @@ h3 {
 	color: #666;
 }
 
-.btn--area--filter{
-	display: flex;
-    width: 80%;
-    justify-content: flex-end;
-    
-}
+
 /* 슬라이더 전체 컨테이너 스타일 */
 .event--container {
 	padding: 50px;
