--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -85,7 +85,9 @@ p {
 /* 추가 CSS 스타일링 */
 
 /* 카테고리 필터 스타일 */
-.category--area--filter {
+.category--area--filter, 
+.genre--area--filter,
+.day--area--filter {
 	display: flex;
 	gap: 15px;
 	margin-top: 20px;
@@ -93,14 +95,10 @@ p {
 	justify-content: center; /* 카테고리 버튼 중앙 정렬 */
 }
 
-.genre--area--filter {
-	display: flex;
-	gap: 15px;
-	margin-top: 20px;
-	margin-bottom: 20px;
-	justify-content: center; /* 카테고리 버튼 중앙 정렬 */
-}
-.category--btn {
+
+.category--btn,
+.genre--btn,
+.day--btn {
 	margin-top: 15px;
 	margin-bottom: 15px;
 	height: 40px;
@@ -113,38 +111,20 @@ p {
 	cursor: pointer;
 }
 
-.category--btn:hover {
+.category--btn:hover,
+.genre--btn:hover,
+.day--btn:hover {
 	border-color: #FF4D6D; /* 변경된 부분 */
 	transition: background-color 0.3s ease;
 }
 
-.category--btn.active {
+.category--btn.active,
+.genre--btn.active,
+.day--btn.active {
 	background-color: #FFF9D8;
 	color: #444;
 }
 
-.genre--btn {
-	margin-top: 35px;
-	margin-bottom: 15px;
-	height: 40px;
-	padding: 10px 15px;
-	background-color: #f9f9f9;
-	border-width: 1px; /* 변경된 부분: 1px로 설정 */
-	border-color: #dedede;
-	border-style: solid; /* 추가된 부분: solid로 명시적 설정 */
-	border-radius: 25px;
-	cursor: pointer;
-}
-
-.genre--btn:hover {
-	border-color: #FF4D6D; /* 변경된 부분 */
-	transition: background-color 0.3s ease;
-}
-
-.genre--btn.active {
-	background-color: #FFF9D8;
-	color: #444;
-}
 
 /* 정렬 버튼*/
 /* 원형 컨테이너 */
@@ -156,7 +136,8 @@ p {
 	
 }
 .btn--area--category,
-.btn--area--genre {
+.btn--area--genre,
+.btn--area--day {
 	display: flex;
     align-items: center;
     justify-content:center;
@@ -171,7 +152,8 @@ p {
 
 /* 버튼 스타일 */
 .btn--area--category button,
-.btn--area--genre  button {
+.btn--area--genre  button,
+.btn--area--day  button {
     position: relative;
     z-index: 1; /* 버튼 위에 배경이 덮이지 않게 설정 */
     width: 80px;
@@ -184,7 +166,8 @@ p {
     transition: color 0.3s ease;
 }
 .btn--area--category::before,
-.btn--area--genre::before {
+.btn--area--genre::before,
+.btn--area--day::before {
     content: '';
     position: absolute;
     width: 60px;
@@ -197,29 +180,32 @@ p {
 }
 
 .btn--area--category button.active,
-.btn--area--genre button.active  {
-    color: white;
+.btn--area--genre button.active,
+.btn--area--day button.active  {
+    color: black;
 }
 
 /* 애니메이션: 배경이 이동하는 효과 */
 .btn--area--category.active-before::before,
-.btn--area--genre.active-before::before {
+.btn--area--genre.active-before::before,
+.btn--area--day.active-before::before {
     transform: translateX(calc(30px + 0px)); /* 두 번째 버튼으로 이동하는 애니메이션 */
     width: 60px;
 }
 
 .btn--area--category.active-after::before,
-.btn--area--genre.active-after::before  {
-    transform: translateX(0); /* 첫 번째 버튼으로 이동하는 애니메이션 */
-    width: 80px;
+.btn--area--genre.active-after::before,
+.btn--area--day.active-after::before   {
+    transform: translateX(-30px); /* 첫 번째 버튼으로 이동하는 애니메이션 */
+    width: 60px;
 }
 
 /* 책 목록 스타일 */
 h3 {
-	display: flex;
-	margin: 30px;
-	justify-content: center;
-	color: #444;
+	width: 80%;
+    font-size: 40px;
+    display: flex;
+    color: #444;
 }
 
 .book--list--1, .book--list--2, .book--list--3 {
