--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -227,6 +227,7 @@ h3 {
 	background-color: #f9f9f9;
 	box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
+	    cursor: pointer; 
 }
 
 /* 너비가 555px 이하일 때 마진 적용 */
@@ -246,6 +247,7 @@ h3 {
 .book--item:hover, .book--item--funding:hover {
 	background-color: #FFF9D8;
 	transition: transform 0.3s ease, box-shadow 0.3s ease;
+	transform: scale(1.05);  /* 마우스를 올렸을 때 살짝 확대되게 처리 */
 }
 
 .book--item--funding {
